--- a/styles/utility.css
+++ b/styles/utility.css
@@ -33,8 +33,16 @@
     display: flex;
 }
 
+.itenscenter {
+    align-items: center;
+}
+
 .gap-1 {
     gap: 1rem;
+}
+
+.gap-1\.5{
+    gap: 1.5rem
 }
 
 .grid {
