--- a/styles/global.css
+++ b/styles/global.css
@@ -34,6 +34,7 @@
     --fs-lg: 1.25rem;
     --fs-xl: 1.5rem;
     --fs-2xl: 2.5rem;
+    --fs-price: 2rem;
 
     --py-base: 1rem;
     --py-lg: 1.5rem;
